                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.0

  *) [TS-2474] Change proxy.config.net.poll_timeout to 10ms consistently.

  *) [TS-2473] Fix C++ API includes for FreeBSD.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2467] traffic_shell doesn't work with tcl 8.6.
   Author: Ben Aitchison <ben@meh.net.nz>

  *) [TS-1365] Add a new configuration option, proxy.config.net.poll_timeout,
   with the same behavior as the command line option --poll_timeout. Also
   adjust AIO scheduling to correlate to this setting, to avoid additional
   CPU load. Note that this configuration is generally not necessary to
   configure, unless you are concerned with system idle CPU consumption.

  *) [TS-2468] Bring back the load balancer plugin.

  *) [TS-2465] libxml2 detection generates an invalid linker path.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2271] Threaded plugin support with 3rd party libraries.
   Author: Heikki Hannikainen <hessu@hes.iki.fi>

  *) [TS-2464] Remove useless and buggy connection header handling

  *) [TS-2457] Protocol.c: change usage of atoi to strtol.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2459] Fix wrong name for a couple of librecord APIs.
    Author: Yu Qing <happy_fish100@yahoo.com.cn>

  *) [TS-2463] Crash regression around slow-log feature, when logging an
   event. This fixes commit c290ce0df2a.

  *) [TS-32] Fix ICP. Author: Gota Adachi <ada@iij.ad.jp>

  *) [TS-2248] Segmentation fault in HttpTunnel with flow control.
   Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2454] Fix undefined reference to `__sync_fetch_and_sub_8' on ARM
   32bit system.

  *) [TS-2450] Fix assertion failure for T61String type.

  *) [TS-2117] make hipes plugin build.

  *) [TS-2452] Can't access a deleted object.

  *) [TS-2363] Fix assertion of "Unknown file format type!".

  *) [TS-2448] Fix traffic_cop and traffic_manager to obey the